// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightProgressBar renders correctly HP bar: LightProgressBar Hp 1`] = `
<body>
  <div>
    <div
      class="light-progress-bar"
    >
      <div
        class="rpgui-progress-track light-progress-track"
      >
        <div
          class="rpgui-progress-fill red progress-animation"
          style="left: 0px; width: 50%;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`LightProgressBar renders correctly XP bar: LightProgressBar Xp 1`] = `
<body>
  <div>
    <div
      class="light-progress-bar"
    >
      <div
        class="rpgui-progress-track light-progress-track"
      >
        <div
          class="rpgui-progress-fill blue progress-animation"
          style="left: 0px; width: 50%;"
        />
      </div>
    </div>
  </div>
</body>
`;
